hphp/hack/test/typecheck/reactive/pure_calls_rx.php
<?hh // strict

<<__Rx>>
function rx(): void {}

<<__Pure>>
function pure(): void {
  rx();
}
